# Fitness_bot_23.08

./: .env.example  README.md  pyproject.toml
src/: main.py  user_service.py  users.csv
